--- a/memories_project/client/src/index.css
+++ b/memories_project/client/src/index.css
@@ -1,9 +1,14 @@
 body {
   /* background-color: rgba(0, 183, 255, 1); */
   background-image: url('./images/main.jpg');
-  background-position: center;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 50px;
 }
 
 /* Photo by <a href="https://unsplash.com/@timothyeberly?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Timothy Eberly</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
