adding changes for deployment

--- a/memories_project/client/src/index.css
+++ b/memories_project/client/src/index.css
@@ -10,3 +10,14 @@ body {
 }
 
 /* Photo by <a href="https://unsplash.com/@timothyeberly?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Timothy Eberly</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> */
+
+/* <div>
+        Photo by{' '}
+        <a href='https://unsplash.com/@timothyeberly?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'>
+          Timothy Eberly
+        </a>{' '}
+        on{' '}
+        <a href='https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'>
+          Unsplash
+        </a>
+      </div> */
